skia_samplecode_sources = [
  "../samplecode/GMSampleView.h"
  "../samplecode/ClockFaceView.cpp"
  "../samplecode/OverView.cpp"
  "../samplecode/OverView.h"
  "../samplecode/Sample2PtRadial.cpp"
  "../samplecode/SampleAAClip.cpp"
  "../samplecode/SampleAARects.cpp"
  "../samplecode/SampleAARectModes.cpp"
  "../samplecode/SampleAll.cpp"
  "../samplecode/SampleAnimator.cpp"
  "../samplecode/SampleAnimBlur.cpp"
  "../samplecode/SampleApp.cpp"
  "../samplecode/SampleArc.cpp"
  "../samplecode/SampleAvoid.cpp"
  "../samplecode/SampleBigBlur.cpp"
  "../samplecode/SampleBigGradient.cpp"
  "../samplecode/SampleBitmapRect.cpp"
  "../samplecode/SampleBlur.cpp"
  "../samplecode/SampleCamera.cpp"
  "../samplecode/SampleChart.cpp"
  "../samplecode/SampleCircle.cpp"
  "../samplecode/SampleClock.cpp"
  "../samplecode/SampleClip.cpp"
  "../samplecode/SampleCode.h"
  "../samplecode/SampleColorFilter.cpp"
  "../samplecode/SampleComplexClip.cpp"
  "../samplecode/SampleConcavePaths.cpp"
  "../samplecode/SampleCull.cpp"
  "../samplecode/SampleDegenerateTwoPtRadials.cpp"
  "../samplecode/SampleDither.cpp"
  "../samplecode/SampleDitherBitmap.cpp"
  "../samplecode/SampleEffects.cpp"
  "../samplecode/SampleEmboss.cpp"
  "../samplecode/SampleEmptyPath.cpp"
  "../samplecode/SampleEncode.cpp"
  "../samplecode/SampleFatBits.cpp"
  "../samplecode/SampleFillType.cpp"
  "../samplecode/SampleFilter.cpp"
  "../samplecode/SampleFilter2.cpp"
  "../samplecode/SampleFilterFuzz.cpp"
  "../samplecode/SampleFontCache.cpp"
  "../samplecode/SampleFontScalerTest.cpp"
  "../samplecode/SampleFuzz.cpp"
  "../samplecode/SampleGradients.cpp"
  "../samplecode/SampleHairCurves.cpp"
  "../samplecode/SampleHairline.cpp"
  "../samplecode/SampleHairModes.cpp"
  "../samplecode/SampleLayerMask.cpp"
  "../samplecode/SampleLayers.cpp"
  "../samplecode/SampleLCD.cpp"
  "../samplecode/SampleLines.cpp"
  "../samplecode/SampleLua.cpp"
  "../samplecode/SampleManyRects.cpp"
  "../samplecode/SampleMeasure.cpp"
  "../samplecode/SampleMipMap.cpp"
  "../samplecode/SampleMovie.cpp"
  "../samplecode/SampleOvalTest.cpp"
  "../samplecode/SamplePatch.cpp"
  "../samplecode/SamplePath.cpp"
  "../samplecode/SamplePathClip.cpp"
  "../samplecode/SamplePathUtils.cpp"
  "../samplecode/SamplePathEffects.cpp"
  "../samplecode/SamplePicture.cpp"
  "../samplecode/SamplePictFile.cpp"
  "../samplecode/SamplePoints.cpp"
  "../samplecode/SamplePolyToPoly.cpp"
  "../samplecode/SampleRegion.cpp"
  "../samplecode/SampleRepeatTile.cpp"
  "../samplecode/SampleRotateCircles.cpp"
  "../samplecode/SampleShaders.cpp"
  "../samplecode/SampleShaderText.cpp"
  "../samplecode/SampleSkLayer.cpp"
  "../samplecode/SampleSlides.cpp"
  "../samplecode/SampleStringArt.cpp"
  "../samplecode/SampleStrokePath.cpp"
  "../samplecode/SampleText.cpp"
  "../samplecode/SampleTextAlpha.cpp"
  "../samplecode/SampleTextBox.cpp"
  "../samplecode/SampleTextOnPath.cpp"
  "../samplecode/SampleTextureDomain.cpp"
  "../samplecode/SampleTiling.cpp"
  "../samplecode/SampleTinyBitmap.cpp"
  "../samplecode/SampleUnitMapper.cpp"
  "../samplecode/SampleUnpremul.cpp"
  "../samplecode/SampleVertices.cpp"
  "../samplecode/SampleXfermodesBlur.cpp"
  "../samplecode/TransitionView.cpp"
  "../samplecode/TransitionView.h"

  # DrawingBoard
  #'../experimental/DrawingBoard/SkColorPalette.h"
  #'../experimental/DrawingBoard/SkColorPalette.cpp"
  #'../experimental/DrawingBoard/SkNetPipeController.h"
  #'../experimental/DrawingBoard/SkNetPipeController.cpp"
  #'../experimental/DrawingBoard/SampleDrawingClient.cpp"
  #'../experimental/DrawingBoard/SampleDrawingServer.cpp"

  # Networking
  #'../experimental/Networking/SampleNetPipeReader.cpp"
  #'../experimental/Networking/SkSockets.cpp"
  #'../experimental/Networking/SkSockets.h"

  # TiledPipeController
  "../src/pipe/utils/SamplePipeControllers.h"
  "../src/pipe/utils/SamplePipeControllers.cpp"

  # Lua
  "../src/utils/SkLuaCanvas.cpp"
  "../src/utils/SkLua.cpp"
]

skia_samplecode_sources -= [
  "../samplecode/SampleSkLayer.cpp" #relies on SkMatrix44 which doesn't compile
  # "../samplecode/SampleWarp.cpp"
  "../samplecode/SampleFontCache.cpp"
]

if (is_win) {skia_samplecode_sources -= ["../samplecode/SampleEncode.cpp"]}