
skia_xml_sources = [
  "../include/xml/SkBML_WXMLParser.h",
  "../include/xml/SkBML_XMLParser.h",
  "../include/xml/SkDOM.h",
  "../include/xml/SkJS.h",
  "../include/xml/SkXMLParser.h",
  "../include/xml/SkXMLWriter.h",

  "../src/xml/SkBML_Verbs.h",
  "../src/xml/SkBML_XMLParser.cpp",
  "../src/xml/SkDOM.cpp",
  "../src/xml/SkJS.cpp",
  "../src/xml/SkJSDisplayable.cpp",
  "../src/xml/SkXMLParser.cpp",
  "../src/xml/SkXMLPullParser.cpp",
  "../src/xml/SkXMLWriter.cpp",
]

skia_xml_sources -= ["../src/xml/SkXMLPullParser.cpp"]
skia_xml_sources -= [
  "../include/xml/SkJS.h"
  "../src/xml/SkJS.cpp"
  "../src/xml/SkJSDisplayable.cpp"
]